Updated home link in browse

--- a/ModuleBrowse.html
+++ b/ModuleBrowse.html
@@ -15,7 +15,7 @@
               <h1 class="navbar-brand">Job<span id="brandImg">Search</span></h1>
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link text-dark mx-3" href="./module.html">Home</a>
+                  <a class="nav-link text-dark mx-3" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-dark mx-3" href="./ModuleJobs.html">Jobs</a>
